syntax = "proto3";

option go_package = "matchmaking/proto";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

package matchmaking;

service Matchmaking {
  rpc AddPlayer(AddPlayerRequest) returns (AddPlayerResponse) {}

  rpc RemovePlayer(RemovePlayerRequest) returns (RemovePlayerResponse) {}

  rpc Status(StatusRequest) returns (stream StatusResponse) {}
}

message PlayerData {
  string id = 1;
  int32  level = 2;
}

message AddPlayerRequest {
  repeated PlayerData players = 1;
}

message AddPlayerResponse {}

message RemovePlayerRequest {
  repeated PlayerData players = 1;
}

message RemovePlayerResponse {}

message StatusRequest {
  string playerId = 1;
}

message StatusResponse {
  string id = 1;
  google.protobuf.Timestamp created = 2;
  string type = 3;
  repeated PlayerData players = 4;
}

